<?php
/**
 * Crypt
 *
 * @author Ashley Kitson
 * @copyright Ashley Kitson, 2015, UK
 * @license GPL V3+ See LICENSE.md
 */

namespace Chippyash\Crypt\Exceptions;

/**
 * Cryptography exception
 */
class CryptException extends \Exception {}